Moved the fonts into its own module

--- a/index.html
+++ b/index.html
@@ -1,18 +1,35 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Chromatik</title>
+        <link rel="stylesheet" href="/fonts/fonts.css" /> 
+        <title>COLOURS GALORE!!!</title>
         <style>
             html {
-                background: rgb(65, 0, 65);
-                color: rgb(182, 182, 182);
+                background: rgb(48, 128, 101);
+                color: rgb(32, 32, 32);
+                font-family:'Sylfaen';
+            }
+
+            h2   {
+                color: rgb(141, 240, 132);
+                font-size: xx-large;
+                font-weight: 500;
+            }
+
+            h2.second {
+                color: rgb(155, 216, 245);
+                font-size:XXX-large;
+                Font-style: italic;
+                font-weight: 500;
             }
         </style>
     </head>
     <body>
-        <h1>Colour Picker</h1>
+        <h1>Colour Picker in the making!</h1>
         <main>
-            <h2>Hello World!</h2>
+            <h2>No world without kiggy</h2>
+            <h2 class="second">Cute orange kitty</h2>
+            <h2>Ehehehehehe!</h2>
         </main>
     </body>
-</html>
+</html> 
